# DeMon_Sound

./: LICENSE  Readme.md  build.gradle  settings.gradle
FmodSound/: CMakeLists.txt  build.gradle
FmodSound/src/main/: AndroidManifest.xml
FmodSound/src/main/cpp/: native-lib.cpp
FmodSound/src/main/java/com/demon/fmodsound/: FmodSound.kt
SoundCoding/: build.gradle
SoundCoding/src/main/: AndroidManifest.xml
SoundCoding/src/main/java/com/demon/soundcoding/: AmrToPcm.java  AmrToWav.java  PcmToAmr.java  PcmToWav.java  (+3 more)
SoundTouch/: build.gradle
SoundTouch/jni/: Android.mk  Application.mk  soundtouch-jni.cpp
SoundTouch/jni/SoundStretch/: RunParameters.h  WavFile.cpp  main.cpp
SoundTouch/jni/SoundTouch/: AAFilter.h  BPMDetect.cpp  FIFOSampleBuffer.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  RateTransposer.h  SoundTouch.cpp  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
SoundTouch/jni/include/: BPMDetect.h  FIFOSampleBuffer.h  FIFOSamplePipe.h  SoundTouch.h
SoundTouch/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: background_rectangle.xml
app/src/main/res/layout/: activity_main.xml  activity_sound_fmod.xml  activity_sound_touch.xml  fragment_dialog_play.xml  fragment_dialog_recording.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
